# Fish

./: README.md  pom.xml
src/main/java/com/spiritlight/chess/fish/: Main.java  Test.java
src/main/java/com/spiritlight/chess/fish/game/: FEN.java  Piece.java
src/main/java/com/spiritlight/chess/fish/game/utils/: BitboardMask.java  EndType.java  FENConstant.java  GameConstants.java  GameState.java  GameTree.java  MoveGenerator.java
src/main/java/com/spiritlight/chess/fish/internal/: InternLogger.java
src/main/java/com/spiritlight/chess/fish/internal/annotation/: Mask.java  MaskType.java
src/main/java/com/spiritlight/chess/fish/internal/exceptions/: SystemError.java  (+1 more)
src/main/java/com/spiritlight/chess/fish/test/: TestComponent.java  Tests.java
src/main/java/io/github/rainvaporeon/chess/fish/: Main.java  Test.java
src/main/java/io/github/rainvaporeon/chess/fish/internal/jnative/: CMakeLists.txt  MagicBitboard.java  NativeMagicBoard.java  com_spiritlight_chess_fish_internal_jnative_MagicBitboard.cpp  com_spiritlight_chess_fish_internal_jnative_MagicBitboard.h  io_github_rainvaporeon_chess_fish_internal_jnative_MagicBitboard.cpp  io_github_rainvaporeon_chess_fish_internal_jnative_MagicBitboard.h  io_github_rainvaporeon_chess_fish_internal_jnative_NativeMagicBoard.cpp  io_github_rainvaporeon_chess_fish_internal_jnative_NativeMagicBoard.h
src/main/java/io/github/rainvaporeon/chess/fish/internal/jnative/magic-bits/: README.md
src/main/java/io/github/rainvaporeon/chess/fish/internal/jnative/magic-bits/include/: magic_bits.hpp
src/main/resources/: fen_test.json
(+70 files in other folders)
